fix alignment in form builder

--- a/ui/reuse/client/src/components/topNav/topNav.scss
+++ b/ui/reuse/client/src/components/topNav/topNav.scss
@@ -139,7 +139,7 @@
                 height: 40px;
 
                 .globalActionLink {
-                    vertical-align: top;
+                    vertical-align: baseline;
                 }
             }
         }
